--- a/style.css
+++ b/style.css
@@ -3,30 +3,65 @@ body {
 }
 
 h1 {
-	color: #b70d0d;
+    color: #7b3a22;
 	font-size: 50px;
-	font-family: calibri
+	font-family: 'Dancing Script', cursive;
 }
 
 p {
 	font-weight: normal;
-	width: 500px;
-	text-align: : justify;
+	width: 540px;
+	text-align: justify;
 }
 
 blockquote {
+	width: 500px;
+	text-align: justify;
+}
 
-	    	width: 500px;
-			text-align: : justify;
-		}
 
 a {
+	text-decoration: none;
+	color: red;
+	font-size: 15px;
+	font-family: Comic ;
+	padding: 10px;
+	transition: 1s ease-in-out;
+	display: table-row;
+}
 
+a:hover {
+	color: purple;
 }
 
 img {
 			
 	border: 20px solid black;
 	width: 500px;
+}
 
+.bells {
+	font-family: 'Courgette', cursive;
+	font-size: 20px;
+	font-weight: bold;
+}
+
+table {
+	width: 100%;
+}
+table, td, th {
+	padding: 15px;
+	border: 5px solid #fec107;
+	font-size: 30px;
+	border-collapse: collapse;	
+}
+th {
+	text-align: center;
+	background-color: #fec107;
+	color: black;
+}
+tr {
+	text-align: left;
+	background-color: #382c6e;
+	color: white;
 }
