--- a/style.css
+++ b/style.css
@@ -35,15 +35,15 @@ a:hover {
 }
 
 img {
-			
+
 	border: 20px solid black;
 	width: 500px;
 }
 
-.bells {
+.raven {
 	font-family: 'Courgette', cursive;
-	font-size: 20px;
-	font-weight: bold;
+	font-size: 17px;
+	font-weight: normal;
 }
 
 table {
@@ -53,7 +53,7 @@ table, td, th {
 	padding: 15px;
 	border: 5px solid #fec107;
 	font-size: 30px;
-	border-collapse: collapse;	
+	border-collapse: collapse;
 }
 th {
 	text-align: center;
